--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,7 +397,7 @@ h6 {
 .navbar-mobile ul {
   display: block;
   position: absolute;
-  top: 55px;
+  top: 100px;
   right: 15px;
   bottom: 15px;
   left: 15px;
@@ -475,6 +475,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
+  min-height: 500px;
   height: 80vh;
   overflow: hidden;
   position: relative;
@@ -511,9 +512,10 @@ h6 {
 #hero h2 {
   color: #fff;
   margin-bottom: 30px;
-  font-size: 48px;
+  font-size: 30px;
   font-weight: 700;
 }
+
 
 #hero p {
   width: 80%;
