--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,6 +623,29 @@ section {
   margin-bottom: 0;
   font-style: italic;
 }
+.section-title .btn-wrap{
+   margin: 20px -20px -20px -20px;
+  padding: 20px 15px;
+  background: #f8f8f8;
+  text-align: center;
+}
+.section-title .btn-buy {
+  background: #0880e8;
+  display: inline-block;
+  padding: 8px 35px 10px 35px;
+  border-radius: 50px;
+  color: #fff;
+  transition: none;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  transition: 0.3s;
+}
+.search-title .btn-buy:hover {
+  background: #2b99f8;
+}
+
 
 /*--------------------------------------------------------------
 # Icon Boxes
@@ -1268,6 +1291,7 @@ section {
 
 .portfolio-details .portfolio-description {
   padding-top: 30px;
+  padding-left: 30px;
 }
 
 .portfolio-details .portfolio-description h2 {
