fixes img,message

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+.breakword{
+  word-wrap: break-word;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
