--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -596,7 +596,118 @@ h6 {
     font-size: 28px;
   }
 }
+/*----------------------------------------
+Hero 2
+-----------------------------*/
+#hero2 {
+  width: 100%;
+  min-height: 500px;
+  height: 80vh;
+  overflow: hidden;
+  position: relative;
+  background: url("../img/bg-2.jpg") top center;
+  background-size: cover;
+  position: relative;
+  margin-bottom: -150px;
+  z-index: 99;
+  transition: 0.2s;
+}
 
+#hero2:before {
+  content: "";
+  background: rgba(6, 100, 183, 0.809);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#hero2 .carousel-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#hero2 h2 {
+  color: #fff;
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+
+#hero2 p {
+  width: 80%;
+  animation-delay: 0.4s;
+  margin: 0 auto 30px auto;
+  color: #fff;
+}
+
+#hero2 .carousel-control-prev,
+#hero2 .carousel-control-next {
+  width: 10%;
+}
+
+#hero2 .carousel-control-next-icon,
+#hero2 .carousel-control-prev-icon {
+  background: none;
+  font-size: 48px;
+  line-height: 1;
+  width: auto;
+  height: auto;
+}
+
+#hero2 .btn-get-started {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 50px;
+  transition: 0.5s;
+  line-height: 1;
+  margin: 10px;
+  color: #fff;
+  animation-delay: 0.8s;
+  border: 2px solid #f6b024;
+}
+
+#hero2 .btn-get-started:hover {
+  background: #f6b024;
+  color: #fff;
+  text-decoration: none;
+}
+
+@media (min-width: 1024px) {
+  #hero2 p {
+    width: 60%;
+  }
+
+  #hero2 .carousel-control-prev,
+  #hero2 .carousel-control-next {
+    width: 5%;
+  }
+}
+
+@media (max-width: 768px),
+(max-height: 700px) {
+  #hero2 {
+    height: 120vh;
+    padding: 100px 0;
+  }
+
+  #hero2 h2 {
+    font-size: 28px;
+  }
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
